# jsrmx

./: Cargo.toml  readme.md
src/: input.rs  main.rs  processor.rs
src/input/: file.rs  stdin.rs
src/output/: file.rs
src/processor/: json.rs  json_text.rs  ndjson.rs
src/processor/json/: merge.rs  split.rs
src/processor/ndjson/: bundler.rs  unbundler.rs
tests/: bundle_tests.rs  merge_tests.rs  split_tests.rs  unbundle_tests.rs
