[package]
name = "jsrmx"
description = "A command-line tool to manipulate JSON files. It can split large single-object JSON files into many files; merge multiple JSON files into one large JSON file; bundle multiple JSON files into one NDJSON file, and unbundle one NDJSON file into many JSON files."
repository = "https://github.com/VimCommando/jsrmx"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
env_logger = "^0.11"
eyre = "^0.6"
json-patch = "4.0.0"
log = "^0.4"
rayon = "^1.10"
regex = "^1.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^2.1"
tempfile = "^3.2"
